--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://postgres:ADMIN@1234!ever@localhost:5432/simplifiedit?schema=public"
+#DATABASE_URL="postgresql://postgres:ADMIN@1234!ever@localhost:5432/simplifiedit?schema=public"
+DATABASE_URL="postgresql://postgres.kuejlmfdccijcljqalwc:ADMIN@1234!ever@aws-1-us-east-2.pooler.supabase.com:6543/postgres"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 GOOGLE_CLIENT_ID="your-google-client-id"
