--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 #DATABASE_URL="postgresql://postgres:ADMIN@1234!ever@localhost:5432/simplifiedit?schema=public"
-DATABASE_URL="postgresql://postgres:ADMIN@1234!ever@db.hztavinbkpycihgvlzfj.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres.hztavinbkpycihgvlzfj:ADMINADMIN@1234!ever@aws-1-us-east-1.pooler.supabase.com:6543/postgres"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 GOOGLE_CLIENT_ID="your-google-client-id"
